--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Проект BURGER</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+
 	<link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
 
+<body>
+	<div class="wrapper">
+		<div class="maincontent">
+			<section class="hero section" style="background-image: url('img/hero/Rectangle\ 11.png')">
+
+				<div class="container">
+
+					<header class="header">
+						<a href="" class="logo">
+							<img src="./img/hero/logo.png" alt="" class="logo__picture">
+						</a>
+						<nav class="nav">
+							<ul class="nav__list">
+								<li class="nav__items"><a href="#" class="nav__link">О нас</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Бургуры</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Команда</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Меню</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Отзывы</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Как мы рыботаем</a></li>
+								<li class="nav__items"><a href="#" class="nav__link">Контакты</a></li>
+							</ul>
+						</nav>
+						<a href="#" class="order-btn">Заказать</a>
+					</header>
+
+					<div class="hero__container">
+						<div class="hero__picture">
+							<img src="./img/hero/burger" alt="" class="hero__burger-img">
+						</div>
+						<div class="hero__content">
+							<h1 class="hero__title">МЫ ДЕЛАЕМ
+						</div>
+						<div class="hero__description">натуральные бургеры</div>
+					</div>
+				</div>
+
+				<a href="" class="to-next-position-section"></a>
+			</section>
+		</div>
+
+
+
+
+
+		<section class="we" style="background-image: url('./img/we/bg.png') ">
+			<div class="container">
+				<h1>we</h1>
+			</div>
+		</section>
+		<section class="burgers" style="background-color: rgb(249,180,59)">
+			<div class="container">
+				<h1>burger</h1>
+			</div>
+		</section>
+
+	</div>
+	<!-- .fixed_menu -->
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./js/app.min.js"></script>
+
 </html>
