--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,204 @@
 				</div>
 
 				<a href="" class="to-next-position-section"></a>
+				<a class="down-btn" href="#">
+					<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
+				</a>
+			</section>
+
+
+			<section class="we-best section">
+				<div class="container">
+					<div class="we-best__container">
+						<div class="we-best__title title title__color--black">Мы лучшие</div>
+						<we-best class="we-best__list_wrapper">
+							<ul class="we-best__list">
+								<li class="we-best__item "></li>
+								<div class="we-best-item">
+									<div class="we-best-item__img_wrapper">
+										<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
+									</div>
+									<div class="we-best-item__title">100% свежее мясо</div>
+									<div class="we-best-item__desc">
+										<p>
+											Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+										</p>
+									</div>
+								</div>
+
+
+								<li class="we-best__item">
+									<div class="we-best-item">
+										<div class="we-best-item__img_wrapper">
+											<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
+										</div>
+										<div class="we-best-item__title">Ручная сборка</div>
+										<div class="we-best-item__desc">
+											<p>
+												Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
+												притягивает сюжетный реформаторский пафос.
+											</p>
+										</div>
+									</div>
+
+								</li>
+								<li class="we-best__item">
+									<div class="we-best-item">
+										<div class="we-best-item__img_wrapper">
+											<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
+										</div>
+										<div class="we-best-item__title">Натуральные ингредиенты</div>
+										<div class="we-best-item__desc">
+											<p>
+												Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+											</p>
+										</div>
+									</div>
+
+								</li>
+							</ul>
+						</we-best>
+
+					</div>
+				</div>
+			</section>
+			<section class="reviews section">
+				<ul class="reviews__list container container--full-screen-grid">
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-2.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-3.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-4.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-5.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-6.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-7.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+					<li class="reviews__item" style="background-image: url('./img/reviews/photo-8.png') ">
+						<div class="reviews__hover-block">
+							<h3 class="reviews__title">Константин Спилерг</h3>
+							<div class="reviews__text">
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
+									quam
+									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
+									iste
+									fugit.</p>
+							</div>
+							<a href="#" class="btn btn--bg-black">Подробнее</a>
+
+						</div>
+					</li>
+
+				</ul>
+				<div class="reviews__expanded-block">
+					<div class="reviews__expanded-block-top-row">
+						<div class="reviews__expanded-block-name">Константин Спилерг</div>
+						<a href="#" class="reviews__expanded-block-close"></a>
+					</div>
+					<div class="reviews__expanded-block-text">
+						<p>
+							Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+							быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них.
+							Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой
+							сочной, а сыр таким расплавленным.
+						</p>
+					</div>
+
+
+				</div>
+
 			</section>
 		</div>
 
@@ -38,68 +236,45 @@
 
 
 
-		<section class="we-best section">
-			<div class="container">
-				<div class="we-best__container">
-					<div class="we-best__title title title__color--black">Мы лучшие</div>
-					<we-best class="we-best__list_wrapper">
-						<ul class="we-best__list">
-							<li class="we-best__item "></li>
-							<div class="we-best-item">
-								<div class="we-best-item__img_wrapper">
-									<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
-								</div>
-								<div class="we-best-item__title">100% свежее мясо</div>
-								<div class="we-best-item__desc">
-									<p>
-										Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-									</p>
-								</div>
-							</div>
 
-
-							<li class="we-best__item">
-								<div class="we-best-item">
-									<div class="we-best-item__img_wrapper">
-										<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
-									</div>
-									<div class="we-best-item__title">Ручная сборка</div>
-									<div class="we-best-item__desc">
-										<p>
-											Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
-											притягивает сюжетный реформаторский пафос.
-										</p>
-									</div>
-								</div>
-
-							</li>
-							<li class="we-best__item">
-								<div class="we-best-item">
-									<div class="we-best-item__img_wrapper">
-										<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
-									</div>
-									<div class="we-best-item__title">Натуральные ингредиенты</div>
-									<div class="we-best-item__desc">
-										<p>
-											Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-										</p>
-									</div>
-								</div>
-
-							</li>
-						</ul>
-					</we-best>
-
-				</div>
-			</div>
-		</section>
-		<section class="burgers" style="background-color: rgb(249,180,59)">
-			<div class="container">
-				<h1>burger</h1>
-			</div>
-		</section>
-
-		<!-- .fixed_menu -->
+		<div class="vert-slider">
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide" checked>
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+			<label class="vert-slider__radio">
+				<input type="radio" class="vert-slider__radio-elem" name="slide">
+				<div class="vert-slider__radio-fake"></div>
+			</label>
+</div>
 		<header class="header">
 			<a href="" class="header__logo">
 				<img src="./img/hero/logo.png" alt="mr. burger logo" class="logo__picture">
@@ -118,13 +293,11 @@
 					</ul>
 				</nav>
 			</div>
-			<a href="#" class="btn order-btn btn">Заказать</a>
+			<a href="#" class="btn">Заказать</a>
 
 
 		</header>
-		<a class="down-btn" href="#">
-			<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
-		</a>
+
 	</div>
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
