fixe vert slider position

--- a/app/index.html
+++ b/app/index.html
@@ -14,14 +14,14 @@
 	<div class="wrapper">
 
 		<div class="maincontent">
-			<section class="hero section" style="background-image: url('/img/hero/Rectangle\ 11.png')">
+			<section class="hero section">
 
 				<div class="container">
 
 
 					<div class="hero__container">
 						<div class="hero__picture">
-							<img src="./img/hero/burger.png" alt="" class="hero__burger-img">
+							<img src="./img/hero/burger.png" alt="burger.png" class="hero__burger-img">
 						</div>
 
 						<h1 class="hero__title title">МЫ ДЕЛАЕМ</h1>
@@ -274,7 +274,7 @@
 				<input type="radio" class="vert-slider__radio-elem" name="slide">
 				<div class="vert-slider__radio-fake"></div>
 			</label>
-</div>
+		</div>
 		<header class="header">
 			<a href="" class="header__logo">
 				<img src="./img/hero/logo.png" alt="mr. burger logo" class="logo__picture">
