--- a/app/index.html
+++ b/app/index.html
@@ -236,44 +236,34 @@
 
 
 
-
 		<div class="vert-slider">
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide" checked>
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
-			<label class="vert-slider__radio">
-				<input type="radio" class="vert-slider__radio-elem" name="slide">
-				<div class="vert-slider__radio-fake"></div>
-			</label>
+			<ul class="vert-slider__list">
+				<li class="vert-slider__item vert-slider__item--active">
+					<a href="#" class="vert-slider__link vert-slider__link--active"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+				<li class="vert-slider__item">
+					<a href="#" class="vert-slider__link"></a>
+				</li>
+			</ul>
+
 		</div>
 		<header class="header">
 			<a href="" class="header__logo">
