--- a/app/index.html
+++ b/app/index.html
@@ -43,18 +43,19 @@
 						<div class="we-best__title title title__color--black">Мы лучшие</div>
 						<we-best class="we-best__list_wrapper">
 							<ul class="we-best__list">
-								<li class="we-best__item "></li>
-								<div class="we-best-item">
-									<div class="we-best-item__img_wrapper">
-										<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
-									</div>
-									<div class="we-best-item__title">100% свежее мясо</div>
-									<div class="we-best-item__desc">
-										<p>
-											Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-										</p>
-									</div>
-								</div>
+								<li class="we-best__item">
+									<div class="we-best-item">
+										<div class="we-best-item__img_wrapper">
+											<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
+										</div>
+										<div class="we-best-item__title">100% свежее мясо</div>
+										<div class="we-best-item__desc text-block">
+											<p>
+												Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+											</p>
+										</div>
+								</li>
+
 
 
 								<li class="we-best__item">
@@ -63,7 +64,7 @@
 											<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
 										</div>
 										<div class="we-best-item__title">Ручная сборка</div>
-										<div class="we-best-item__desc">
+										<div class="we-best-item__desc text-block">
 											<p>
 												Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
 												притягивает сюжетный реформаторский пафос.
@@ -78,7 +79,7 @@
 											<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
 										</div>
 										<div class="we-best-item__title">Натуральные ингредиенты</div>
-										<div class="we-best-item__desc">
+										<div class="we-best-item__desc text-block">
 											<p>
 												Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
 											</p>
@@ -98,11 +99,8 @@
 						<div class="reviews__hover-block">
 							<h3 class="reviews__title">Константин Спилерг</h3>
 							<div class="reviews__text">
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
-									quam
-									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
-									iste
-									fugit.</p>
+								<p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
+									могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							</div>
 							<a href="#" class="btn btn--bg-black">Подробнее</a>
 
@@ -112,11 +110,8 @@
 						<div class="reviews__hover-block">
 							<h3 class="reviews__title">Константин Спилерг</h3>
 							<div class="reviews__text">
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas tenetur similique numquam minima modi
-									quam
-									repellendus quis recusandae quasi earum aliquam ad molestiae veniam nemo consequatur consequuntur, eveniet
-									iste
-									fugit.</p>
+								<p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
+									могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							</div>
 							<a href="#" class="btn btn--bg-black">Подробнее</a>
 
