--- a/app/index.html
+++ b/app/index.html
@@ -20,20 +20,22 @@
 
 
 					<div class="hero__container">
+
 						<div class="hero__picture">
 							<img src="./img/hero/burger.png" alt="burger.png" class="hero__burger-img">
 						</div>
+
 
 						<h1 class="hero__title title">МЫ ДЕЛАЕМ</h1>
 
 						<div class="hero__desc">натуральные бургеры</div>
 					</div>
+
 				</div>
 
-				<a href="" class="to-next-position-section"></a>
-				<a class="down-btn" href="#">
-					<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
-				</a>
+				<!-- <a href="" class="to-next-position-section"></a> -->
+
+
 			</section>
 
 
@@ -260,30 +262,37 @@
 			</ul>
 
 		</div>
-		<header class="header">
-			<a href="" class="header__logo">
-				<img src="./img/hero/logo.png" alt="mr. burger logo" class="logo__picture">
+
+		<div class="nav-screen">
+			<header class="header">
+				<a href="#" class="header__logo">
+					<img src="./img/hero/logo.png" alt="mr. burger logo" class="header__logo-img">
+				</a>
+				<div class="header__buttons">
+
+					<nav class="nav">
+						<ul class="nav__list">
+							<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+				<a href="#" class="btn">Заказать</a>
+
+
+			</header>
+			<a class="down-btn" href="#">
+				<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
 			</a>
-			<div class="header__buttons">
-
-				<nav class="nav">
-					<ul class="nav__list">
-						<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
-						<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-					</ul>
-				</nav>
-			</div>
-			<a href="#" class="btn">Заказать</a>
-
-
-		</header>
+		</div>
 
 	</div>
+
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./js/app.min.js"></script>
