--- a/app/sections/10_hero.html
+++ b/app/sections/10_hero.html
@@ -5,7 +5,7 @@
 
 		<div class="hero__container">
 
-			<div class="hero__picture">
+			<div class="hero__img-wrapper">
 				<img src="./img/hero/burger.png" alt="burger.png" class="hero__burger-img">
 			</div>
 
@@ -16,8 +16,5 @@
 		</div>
 
 	</div>
-
-	<!-- <a href="" class="to-next-position-section"></a> -->
-
 
 </section>
