--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
 		<div class="hero__container">
 
-			<div class="hero__picture">
+			<div class="hero__img-wrapper">
 				<img src="./img/hero/burger.png" alt="burger.png" class="hero__burger-img">
 			</div>
 
@@ -33,71 +33,78 @@
 
 	</div>
 
-	<!-- <a href="" class="to-next-position-section"></a> -->
-
-
 </section>
 <section class="we-best section">
 	<div class="container">
-		<div class="we-best__container">
-			<div class="we-best__title title title__color--black">Мы лучшие</div>
-			<we-best class="we-best__list_wrapper">
-				<ul class="we-best__list">
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">100% свежее мясо</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-								</p>
-							</div>
-					</li>
 
-
-
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">Ручная сборка</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
-									притягивает сюжетный реформаторский пафос.
-								</p>
-							</div>
+		<div class="we-best__title title title__color--black">Мы лучшие</div>
+		<div class="we-best__list_wrapper">
+			<ul class="we-best__list">
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
 						</div>
-
-					</li>
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">Натуральные ингредиенты</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-								</p>
-							</div>
+						<div class="we-best-item__title">100% свежее мясо</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+							</p>
 						</div>
+				</li>
 
-					</li>
-				</ul>
-			</we-best>
+
+
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
+						</div>
+						<div class="we-best-item__title">Ручная сборка</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
+								притягивает сюжетный реформаторский пафос.
+							</p>
+						</div>
+					</div>
+
+				</li>
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
+						</div>
+						<div class="we-best-item__title">Натуральные ингредиенты</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+							</p>
+						</div>
+					</div>
+
+				</li>
+			</ul>
+
 
 		</div>
 	</div>
 </section>
 
+<section class="team section">
+	<div class="team__container">
+		<div class="team__details">
+			<div class="team__title title">КОМАНДА</div>
+			<div class="team__accordeon accordeon"></div>
 
+		</div>
+
+	</div>
+
+</section>
 
 <section class="reviews section">
-	<ul class="reviews__list container container--full-screen-grid">
+	<ul class="reviews__list">
 		<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
 			<div class="reviews__hover-block">
 				<h3 class="reviews__title">Константин Спилерг</h3>
@@ -254,9 +261,7 @@
 
 
 	</header>
-	<a class="down-btn" href="#">
-		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
-	</a>
+
 	<div class="vert-slider">
 		<ul class="vert-slider__list">
 			<li class="vert-slider__item vert-slider__item--active">
@@ -286,6 +291,9 @@
 		</ul>
 
 	</div>
+	<a class="down-btn" href="#">
+		<img class="down-btn__img" src="./img/icons/arrow-scroll.svg" alt="go to next screen">
+	</a>
 </div>
 </div>
 
