--- a/app/sections/20_we-best.html
+++ b/app/sections/20_we-best.html
@@ -1,55 +1,55 @@
 <section class="we-best section">
 	<div class="container">
-		<div class="we-best__container">
-			<div class="we-best__title title title__color--black">Мы лучшие</div>
-			<we-best class="we-best__list_wrapper">
-				<ul class="we-best__list">
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">100% свежее мясо</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-								</p>
-							</div>
-					</li>
 
-
-
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">Ручная сборка</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
-									притягивает сюжетный реформаторский пафос.
-								</p>
-							</div>
+		<div class="we-best__title title title__color--black">Мы лучшие</div>
+		<div class="we-best__list_wrapper">
+			<ul class="we-best__list">
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
 						</div>
-
-					</li>
-					<li class="we-best__item">
-						<div class="we-best-item">
-							<div class="we-best-item__img_wrapper">
-								<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
-							</div>
-							<div class="we-best-item__title">Натуральные ингредиенты</div>
-							<div class="we-best-item__desc text-block">
-								<p>
-									Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-								</p>
-							</div>
+						<div class="we-best-item__title">100% свежее мясо</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+							</p>
 						</div>
+				</li>
 
-					</li>
-				</ul>
-			</we-best>
+
+
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
+						</div>
+						<div class="we-best-item__title">Ручная сборка</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие
+								притягивает сюжетный реформаторский пафос.
+							</p>
+						</div>
+					</div>
+
+				</li>
+				<li class="we-best__item">
+					<div class="we-best-item">
+						<div class="we-best-item__img_wrapper">
+							<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
+						</div>
+						<div class="we-best-item__title">Натуральные ингредиенты</div>
+						<div class="we-best-item__desc text-block">
+							<p>
+								Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+							</p>
+						</div>
+					</div>
+
+				</li>
+			</ul>
+
 
 		</div>
 	</div>
