--- a/app/sections/60_reviews.html
+++ b/app/sections/60_reviews.html
@@ -1,5 +1,5 @@
 <section class="reviews section">
-	<ul class="reviews__list container container--full-screen-grid">
+	<ul class="reviews__list">
 		<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
 			<div class="reviews__hover-block">
 				<h3 class="reviews__title">Константин Спилерг</h3>
