--- a/app/sections/40_team.html
+++ b/app/sections/40_team.html
@@ -1,8 +1,43 @@
 <section class="team section">
 	<div class="team__container">
 		<div class="team__details">
-			<div class="team__title title">КОМАНДА</div>
-			<div class="team__accordeon accordeon"></div>
+			<h2 class="team__title title">КОМАНДА</h2>
+			<ul class="team-accordion">
+				<li class="team-accordion__item is-active">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+				<li class="team-accordion__item">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+				<li class="team-accordion__item">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+
+			</ul>
 
 		</div>
 
