--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Проект BURGER</title>
 
 	<link rel="stylesheet" href="./css/main.css">
@@ -94,15 +94,107 @@
 <section class="team section">
 	<div class="team__container">
 		<div class="team__details">
-			<div class="team__title title">КОМАНДА</div>
-			<div class="team__accordeon accordeon"></div>
+			<h2 class="team__title title">КОМАНДА</h2>
+			<ul class="team-accordion">
+				<li class="team-accordion__item is-active">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+				<li class="team-accordion__item">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+				<li class="team-accordion__item">
+					<a href="#" class="team-accordion__link">
+						Ричард Джеймс
+					</a>
+					<div class="team-accordion__member-details">
+						<div class="team-accordion__member-photo">
+							<img src="./img/team/aphex.png" alt="aphex.png" class="team-accordion__member-photo-img"></div>
+						<div class="team-accordion__member-position">Оператор</div>
+						<div class="team-accordion__member-desc">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+					</div>
+				</li>
+
+			</ul>
 
 		</div>
 
 	</div>
 
 </section>
+<section class="menu section">
+	<h2 class='menu__title title'>МЕНЮ</h2>
+	<ul class="menu-accordion">
+		<li class="menu-accordion__item is-active">
+			<a href="" class="menu-accordion__link" style="background-image: url(./img/menu/photo-meat.png)">
+				<h3 class="menu-accordion__title title">
+					для мясоедов
+				</h3>
+			</a>
+			<div class="menu-accordion__content">
+				<p>
+					Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный
+					механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко
+					относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает
+					И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему,
+					заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман.
+					Наш современник стал особенно чутко относиться к слову.
+				</p>
+			</div>
+		</li>
+		<li class="menu-accordion__item" style="background-image: url(./img/menu/photo-vegan.png)">
+			<a href="" class="menu-accordion__link">
+				<h3 class="menu-accordion__title title">
+					для мясоедов
+				</h3>
+			</a>
+			<div class="menu-accordion__content">
+				<p>
+					Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный
+					механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко
+					относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает
+					И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему,
+					заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман.
+					Наш современник стал особенно чутко относиться к слову.
+				</p>
+			</div>
+		</li>
+		<li class="menu-accordion__item" style="background-image: url(./img/menu/photo-diet.png)">
+			<a href="" class="menu-accordion__link">
+				<h3 class="menu-accordion__title title">
+					диетическое
+				</h3>
+			</a>
+			<div class="menu-accordion__content">
+				<p>
+					Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный
+					механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко
+					относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает
+					И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему,
+					заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман.
+					Наш современник стал особенно чутко относиться к слову.
+				</p>
+			</div>
+		</li>
 
+
+	</ul>
+</section>
 <section class="reviews section">
 	<ul class="reviews__list">
 		<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
@@ -236,8 +328,140 @@
 
 </section>
 
+<section class="form-screen section">
+	<form action="post" class="form container">
+		<h2 class="title form__title">Оставить отзыв</h2>
+		<div class="form__maincontent">
+			<div class="form__col">
+				<div class="form__row">
+					<label class="form__block">
+						<div class="form__input-title">Имя</div>
+						<input type="text" class="form__input">
+					</label>
+					<label class="form__block">
+						<div class="form__input-title">Телефон</div>
+						<input type="text" class="form__input">
+					</label>
+				</div>
+
+				<div class="form__row">
+					<label class="form__block">
+						<div class="form__input-title">Улица</div>
+						<input type="text" class="form__input">
+					</label>
+				</div>
+				<div class="form__row">
+					<label class="form__block">
+						<div class="form__input-title">Дом</div>
+						<input type="text" class="form__input">
+					</label>
+					<label class="form__block">
+						<div class="form__input-title">Корпус</div>
+						<input type="text" class="form__input">
+					</label>
+					<label class="form__block">
+						<div class="form__input-title">Квартира</div>
+						<input type="text" class="form__input">
+					</label>
+					<label class="form__block">
+						<div class="form__input-title">Этаж</div>
+						<input type="text" class="form__input">
+					</label>
+				</div>
+			</div>
+			<div class="form__col">
+				<div class="form__row">
+
+					<label class="form__block">
+						<div class="form__input-title">Комментарий</div>
+						<textarea class="
+							form__input
+							form__textarea 
+					"></textarea>
+					</label>
+
+				</div>
+				<div class="form__row">
+					<label class="form__radio">
+						<input type="radio" class="form__radio-elem" name="pay" checked>
+						<div class="form__radio-fake"></div>
+						<div class="form__radio-title">Потребуется сдача</div>
+					</label>
+					<label class="form__radio">
+						<input type="radio" class="form__radio-elem" name="pay">
+						<div class="form__radio-fake"></div>
+						<div class="form__radio-title">Оплата по карте</div>
+					</label>
+				</div>
+				<div class="form__row">
+					<label class="form__checkbox">
+						<input type="checkbox" class="form__checkbox-elem" name="call">
+						<div class="form__checkbox-fake"></div>
+						<div class="form__radio-title">Не перезванивать</div>
+					</label>
+				</div>
+				<div class="form__row">
+					<a href="#" class="btn">Заказать</a>
+					<a href="#" class="btn btn--bg-black">Очистить</a>
+
+				</div>
+
+			</div>
+
+	</form>
+
+</section>
+<section class="map section">
+	<div class="map__map">
+	</div>
+	<footer class="footer">
+		<div class="footer__col footer__contacts">
+			<address class="contacts">
+				<div class="contacts__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
+				<div class="contacts__phone">
+					<a class="contacts__phone phone__link" href="tel:+78123771377">
+						<img class="phone__img" src="./img/icons/phone.svg" alt="Телефон">
+						<div class="phone__txt">+7 (812) 377-13-77</div>
+					</a>
+				</div>
+			</address>
+		</div>
+		<div class="footer__col footer__social">
+			<ul class="social">
+				<li class="social__item">
+					<a class="social__link" href="#">
+						<svg class="social__icon">
+							<use xlink:href="./img/icons/sprite.svg#vk" />
+						</svg>
+					</a>
+				</li>
+				<li class="social__item">
+					<a class="social__link" href="#">
+						<svg class="social__icon">
+							<use xlink:href="./img/icons/sprite.svg#fb" />
+						</svg>
+					</a>
+				</li>
+				<li class="social__item">
+					<a class="social__link" href="#">
+						<svg class="social__icon">
+							<use xlink:href="./img/icons//sprite.svg#inst" />
+						</svg>
+					</a>
+				<li class="social__item">
+					<a class="social__link" href="#">
+						<svg class="social__icon">
+							<use xlink:href="./img/icons//sprite.svg#twitter" />
+						</svg>
+					</a>
+				</li>
+			</ul>
 
 
+
+		</div>
+	</footer>
+</section>
 <div class="nav-screen">
 	<header class="header">
 		<a href="#" class="header__logo">
