--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#meat" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">100% свежее мясо</div>
 						<div class="we-best-item__desc text-block">
@@ -58,7 +61,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#hand" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">Ручная сборка</div>
 						<div class="we-best-item__desc text-block">
@@ -73,7 +79,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#natural" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">Натуральные ингредиенты</div>
 						<div class="we-best-item__desc text-block">
@@ -415,7 +424,7 @@
 	<div class="map__map">
 	</div>
 	<footer class="footer">
-		<div class="footer__col footer__contacts">
+		<div class="footer__contacts">
 			<address class="contacts">
 				<div class="contacts__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
 				<div class="contacts__phone">
@@ -426,32 +435,32 @@
 				</div>
 			</address>
 		</div>
-		<div class="footer__col footer__social">
+		<div class="footer__social">
 			<ul class="social">
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons/sprite.svg#vk" />
+							<use xlink:href="./img/contacts/social_sprite.svg#vk" />
 						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons/sprite.svg#fb" />
+							<use xlink:href="./img/contacts/social_sprite.svg#fb" />
 						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons//sprite.svg#inst" />
+							<use xlink:href="./img/contacts/social_sprite.svg#inst" />
 						</svg>
 					</a>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons//sprite.svg#twitter" />
+							<use xlink:href="./img/contacts/social_sprite.svg#twitter" />
 						</svg>
 					</a>
 				</li>
@@ -482,7 +491,10 @@
 			</nav>
 		</div>
 		<a href="#" class="btn">Заказать</a>
+		<a href="#" class="hamburger-menu-link">
+			<div class="hamburger-menu-link__bars"></div>
 
+		</a>
 
 	</header>
 
