--- a/app/sections/90_contacts.html
+++ b/app/sections/90_contacts.html
@@ -2,7 +2,7 @@
 	<div class="map__map">
 	</div>
 	<footer class="footer">
-		<div class="footer__col footer__contacts">
+		<div class="footer__contacts">
 			<address class="contacts">
 				<div class="contacts__address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
 				<div class="contacts__phone">
@@ -13,32 +13,32 @@
 				</div>
 			</address>
 		</div>
-		<div class="footer__col footer__social">
+		<div class="footer__social">
 			<ul class="social">
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons/sprite.svg#vk" />
+							<use xlink:href="./img/contacts/social_sprite.svg#vk" />
 						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons/sprite.svg#fb" />
+							<use xlink:href="./img/contacts/social_sprite.svg#fb" />
 						</svg>
 					</a>
 				</li>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons//sprite.svg#inst" />
+							<use xlink:href="./img/contacts/social_sprite.svg#inst" />
 						</svg>
 					</a>
 				<li class="social__item">
 					<a class="social__link" href="#">
 						<svg class="social__icon">
-							<use xlink:href="./img/icons//sprite.svg#twitter" />
+							<use xlink:href="./img/contacts/social_sprite.svg#twitter" />
 						</svg>
 					</a>
 				</li>
