--- a/app/sections/20_we-best.html
+++ b/app/sections/20_we-best.html
@@ -7,7 +7,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#meat" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">100% свежее мясо</div>
 						<div class="we-best-item__desc text-block">
@@ -22,7 +25,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#hand" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">Ручная сборка</div>
 						<div class="we-best-item__desc text-block">
@@ -37,7 +43,10 @@
 				<li class="we-best__item">
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
-							<img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img">
+							<!-- <img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img"> -->
+							<svg class="features__pic">
+								<use xlink:href="./img/we-best/we_sprite.svg#natural" />
+							</svg>
 						</div>
 						<div class="we-best-item__title">Натуральные ингредиенты</div>
 						<div class="we-best-item__desc text-block">
