--- a/app/sections/95_nav-screen.html
+++ b/app/sections/95_nav-screen.html
@@ -18,7 +18,10 @@
 			</nav>
 		</div>
 		<a href="#" class="btn">Заказать</a>
+		<a href="#" class="hamburger-menu-link">
+			<div class="hamburger-menu-link__bars"></div>
 
+		</a>
 
 	</header>
 
