--- a/app/sections/20_we-best.html
+++ b/app/sections/20_we-best.html
@@ -8,7 +8,7 @@
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
 							<!-- <img src="./img/we-best/meat.png" alt="meat.png" class="we-best-item__img"> -->
-							<svg class="features__pic">
+							<svg class="we-best-item__img">
 								<use xlink:href="./img/we-best/we_sprite.svg#meat" />
 							</svg>
 						</div>
@@ -26,7 +26,7 @@
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
 							<!-- <img src="./img/we-best/hand.png" alt="hand.png" class="we-best-item__img"> -->
-							<svg class="features__pic">
+							<svg class="we-best-item__img">
 								<use xlink:href="./img/we-best/we_sprite.svg#hand" />
 							</svg>
 						</div>
@@ -44,7 +44,7 @@
 					<div class="we-best-item">
 						<div class="we-best-item__img_wrapper">
 							<!-- <img src="./img/we-best/natural.png" alt="natural.png" class="we-best-item__img"> -->
-							<svg class="features__pic">
+							<svg class="we-best-item__img">
 								<use xlink:href="./img/we-best/we_sprite.svg#natural" />
 							</svg>
 						</div>
