--- a/app/sections/80_form.html
+++ b/app/sections/80_form.html
@@ -1,6 +1,6 @@
 <section class="form-screen section">
 	<form action="post" class="form container">
-		<h2 class="title form__title">Оставить отзыв</h2>
+		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
 		<div class="form__maincontent">
 			<div class="form__col">
 				<div class="form__row">
