--- a/app/sections/30_burgers.html
+++ b/app/sections/30_burgers.html
@@ -61,13 +61,14 @@
 
 		</ul>
 
+		<a class="burgers__prev" href="#" id="slide-prev"> </a>
+		<a class="burgers__next" href="#" id="slide-next"> </a>
 
-
-		<a class="burgers__prev" href="#" id="slide-prev">
+		<!-- <a class="burgers__prev" href="#" id="slide-prev">
 			<img class="arrow-left" src="./img/content/first/arrow-scroll.svg" alt="">
 		</a>
 		<a class="burgers__next" href="#" id="slide-next">
 			<img class="arrow-right" src="./img/content/first/arrow-scroll.svg" alt="">
-		</a>
+		</a> -->
 	</div>
 </section>
