--- a/app/sections/95_nav-screen.html
+++ b/app/sections/95_nav-screen.html
@@ -20,8 +20,22 @@
 		<a href="#" class="btn">Заказать</a>
 		<a href="#" class="hamburger-menu-link">
 			<div class="hamburger-menu-link__bars"></div>
-
 		</a>
+
+		<div class="hamburger-menu is-active" id="hamburger-menu">
+			<div class="hamburger-menu__items">
+				<nav class="nav nav_hamburger">
+					<ul class="nav__list" id="nav__list_hamburger">
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="1">О нас</a></li>
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="2">Бургеры</a></li>
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="3">Команда</a></li>
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="4">Меню</a></li>
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="5">Отзывы</a></li>
+						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="7">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
 
 	</header>
 
