--- a/app/sections/95_nav-screen.html
+++ b/app/sections/95_nav-screen.html
@@ -22,16 +22,21 @@
 			<div class="hamburger-menu-link__bars"></div>
 		</a>
 
-		<div class="hamburger-menu is-active" id="hamburger-menu">
+		<div class="hamburger-menu " id="hamburger-menu">
 			<div class="hamburger-menu__items">
 				<nav class="nav nav_hamburger">
 					<ul class="nav__list" id="nav__list_hamburger">
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="1">О нас</a></li>
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="2">Бургеры</a></li>
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="3">Команда</a></li>
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="4">Меню</a></li>
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="5">Отзывы</a></li>
-						<li class="nav__item nav__item_hamburger slideInUp"><a class="nav__link" href="#" data-scroll-to="7">Контакты</a></li>
+						<nav class="nav">
+							<ul class="nav__list">
+								<li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Бургуры</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Команда</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Меню</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Как мы рыботаем</a></li>
+								<li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+							</ul>
+						</nav>
 					</ul>
 				</nav>
 			</div>
