create accord js

--- a/app/sections/50_menu.html
+++ b/app/sections/50_menu.html
@@ -1,6 +1,6 @@
 <section class="menu section">
 	<h2 class='menu__title title'>МЕНЮ</h2>
-	<ul class="menu-accordion">
+	<ul class="menu-accordion accordion">
 		<li class="menu-accordion__item is-active">
 			<a href="" class="menu-accordion__link" style="background-image: url(./img/menu/photo-meat.png)">
 				<h3 class="menu-accordion__title title">
