--- a/app/index.html
+++ b/app/index.html
@@ -177,7 +177,7 @@
 	<div class="team__container">
 		<div class="team__details">
 			<h2 class="team__title title">КОМАНДА</h2>
-			<ul class="team-accordion">
+			<ul class="team-accordion accordion">
 				<li class="team-accordion__item is-active">
 					<a href="#" class="team-accordion__link">
 						Ричард Джеймс
@@ -221,7 +221,7 @@
 </section>
 <section class="menu section">
 	<h2 class='menu__title title'>МЕНЮ</h2>
-	<ul class="menu-accordion">
+	<ul class="menu-accordion accordion">
 		<li class="menu-accordion__item is-active">
 			<a href="" class="menu-accordion__link" style="background-image: url(./img/menu/photo-meat.png)">
 				<h3 class="menu-accordion__title title">
