--- a/app/sections/40_team.html
+++ b/app/sections/40_team.html
@@ -3,7 +3,7 @@
 		<div class="team__details">
 			<h2 class="team__title title">КОМАНДА</h2>
 			<ul class="team-accordion accordion">
-				<li class="team-accordion__item is-active">
+				<li class="team-accordion__item">
 					<a href="#" class="team-accordion__link">
 						Ричард Джеймс
 					</a>
