--- a/app/index.html
+++ b/app/index.html
@@ -239,8 +239,8 @@
 				</p>
 			</div>
 		</li>
-		<li class="menu-accordion__item" style="background-image: url(./img/menu/photo-vegan.png)">
-			<a href="" class="menu-accordion__link">
+		<li class="menu-accordion__item">
+			<a href="" class="menu-accordion__link" style="background-image: url(./img/menu/photo-vegan.png)">
 				<h3 class="menu-accordion__title title">
 					для мясоедов
 				</h3>
@@ -256,8 +256,8 @@
 				</p>
 			</div>
 		</li>
-		<li class="menu-accordion__item" style="background-image: url(./img/menu/photo-diet.png)">
-			<a href="" class="menu-accordion__link">
+		<li class="menu-accordion__item">
+			<a href="" class="menu-accordion__link" style="background-image: url(./img/menu/photo-diet.png)">
 				<h3 class="menu-accordion__title title">
 					диетическое
 				</h3>
