--- a/app/sections/30_burgers.html
+++ b/app/sections/30_burgers.html
@@ -172,7 +172,7 @@
 				<div class="burgers__ingredients ingredients">
 					<img class="ingredients__icon" src="./img/icons/burger.svg" alt="burger icon">
 					<div class="ingredients__text">состав</div>
-					<div class="ingredients__dropdown">
+					<a class="ingredients__dropdown">
 						<ul class="ingredients__list">
 							<li class="ingredients__row">
 								<div class="ingredients__cell"><img src="./img/icons/beef.svg" alt="ingredients__table-icon"></div>
@@ -193,7 +193,7 @@
 								</div>
 							</li>
 						</ul>
-					</div>
+					</a>
 				</div>
 				<div class="burgers__weight">
 					<div class="burgers__weight-icon">
@@ -289,5 +289,5 @@
 		<a class="burgers__next" href="#" id="slide-next">
 			<img class="arrow-right" src="./img/content/first/arrow-scroll.svg" alt="">
 		</a> -->
-	</div>
+		</a>
 </section>
