--- a/app/sections/80_form.html
+++ b/app/sections/80_form.html
@@ -47,7 +47,7 @@
 						<textarea class="
 							form__input
 							form__textarea 
-					"></textarea>
+					" name="comment"></textarea>
 					</label>
 
 				</div>
@@ -72,7 +72,7 @@
 				</div>
 				<div class="form__row">
 					<a href="#" class="btn" id="order-btn">Заказать</a>
-					<a href="#" class="btn btn--bg-black">Очистить</a>
+					<a href="#" class="btn btn--bg-black" id='clearForm-btn'>Очистить</a>
 
 				</div>
 
