--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -1,5 +1,22 @@
 </div>
+<div class="modal" id='modal'>
+	<div class="modal__container">
+		<div class="modal__top-row">
+			<div class="modal__name" id="modal__name">Константин Спилерг</div>
+			<a href="#" class="modal__close" id="modal__close"></a>
+		</div>
+		<div class="modal__text" id="modal__text">
+			<p>
+				Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
+				быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них.
+				Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой
+				сочной, а сыр таким расплавленным.
+			</p>
+		</div>
+	</div>
 
+
+</div>
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./libs/siema.min.js"></script>
