--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 <body>
 	<div class="wrapper">
 
-		<div class="maincontent">
-<section class="hero section">
+		<div class="maincontent" id="maincontent">
+<section class="hero section" data-anchor="hero">
 
 	<div class="container">
 
@@ -34,7 +34,7 @@
 	</div>
 
 </section>
-<section class="we-best section">
+<section class="we-best section" data-anchor="we-best">
 	<div class="container">
 
 		<div class="we-best__title title title__color--black">Мы лучшие</div>
@@ -99,7 +99,7 @@
 		</div>
 	</div>
 </section>
-<section class="burgers section">
+<section class="burgers section" data-anchor="burgers">
 	<div class="container burgers__container">
 
 
@@ -392,7 +392,7 @@
 		</a> -->
 		</a>
 </section>
-<section class="team section">
+<section class="team section" data-anchor="team">
 	<div class="team__container">
 		<div class="team__details">
 			<h2 class="team__title title">КОМАНДА</h2>
@@ -438,7 +438,7 @@
 	</div>
 
 </section>
-<section class="menu section">
+<section class="menu section" data-anchor="menu">
 	<h2 class='menu__title title'>МЕНЮ</h2>
 	<ul class="menu-accordion accordion">
 		<li class="menu-accordion__item is-active">
@@ -496,7 +496,7 @@
 
 	</ul>
 </section>
-<section class="reviews section">
+<section class="reviews section" data-anchor="reviews">
 	<ul class="reviews__list">
 		<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
 			<div class="reviews__hover-block">
@@ -614,7 +614,7 @@
 
 </section>
 
-<section class="form-screen section">
+<section class="form-screen section" data-anchor="form">
 	<form action="post" class="form container" id="order-form">
 		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
 		<div class="form__maincontent">
@@ -697,7 +697,7 @@
 	</form>
 
 </section>
-<section class="map section">
+<section class="map section" data-anchor="map">
 	<div class="map__map">
 	</div>
 	<footer class="footer">
@@ -846,6 +846,9 @@
 
 
 </div>
+<!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
+<script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
+<script type="text/javascript" src="./js/fullPage.js"></script>
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./libs/siema.min.js"></script>
