--- a/app/sections/50_menu.html
+++ b/app/sections/50_menu.html
@@ -1,4 +1,4 @@
-<section class="menu section">
+<section class="menu section" data-anchor="menu">
 	<h2 class='menu__title title'>МЕНЮ</h2>
 	<ul class="menu-accordion accordion">
 		<li class="menu-accordion__item is-active">
