--- a/app/sections/60_reviews.html
+++ b/app/sections/60_reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews section">
+<section class="reviews section" data-anchor="reviews">
 	<ul class="reviews__list">
 		<li class="reviews__item" style="background-image: url('./img/reviews/photo-1.png') ">
 			<div class="reviews__hover-block">
