--- a/app/sections/80_form.html
+++ b/app/sections/80_form.html
@@ -1,4 +1,4 @@
-<section class="form-screen section">
+<section class="form-screen section" data-anchor="form">
 	<form action="post" class="form container" id="order-form">
 		<h2 class="title form__title">ЗАКАЖИТЕ ДОСТАВКУ</h2>
 		<div class="form__maincontent">
