--- a/app/sections/40_team.html
+++ b/app/sections/40_team.html
@@ -1,4 +1,4 @@
-<section class="team section">
+<section class="team section" data-anchor="team">
 	<div class="team__container">
 		<div class="team__details">
 			<h2 class="team__title title">КОМАНДА</h2>
