--- a/app/sections/90_contacts.html
+++ b/app/sections/90_contacts.html
@@ -1,4 +1,4 @@
-<section class="map section">
+<section class="map section" data-anchor="map">
 	<div class="map__map">
 	</div>
 	<footer class="footer">
