--- a/app/sections/99_finish.html
+++ b/app/sections/99_finish.html
@@ -17,6 +17,9 @@
 
 
 </div>
+<!-- <script type="text/javascript" src="./libs/fullpage.min.js"></script> -->
+<script type="text/javascript" src="./libs/fullpage.extensions.min.js"></script>
+<script type="text/javascript" src="./js/fullPage.js"></script>
 </body>
 <script src="./libs/jquery-3.3.1.min.js"></script>
 <script src="./libs/siema.min.js"></script>
