--- a/app/sections/00_begin.html
+++ b/app/sections/00_begin.html
@@ -8,6 +8,7 @@
 	<title>Проект BURGER</title>
 
 	<link rel="stylesheet" href="./css/main.css">
+	<script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 
 <body>
