--- a/app/sections/90_contacts.html
+++ b/app/sections/90_contacts.html
@@ -1,5 +1,5 @@
 <section class="map section" data-anchor="map">
-	<div class="map__map">
+	<div class="map__map" id="map__map">
 	</div>
 	<footer class="footer">
 		<div class="footer__contacts">
@@ -49,3 +49,5 @@
 		</div>
 	</footer>
 </section>
+
+</div>
